--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <div class="container">
-        Ewan is gay
+        Test
       </div>
     </main>
     <footer>
